# pie-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Commands  Engine.cpp  README.md  clangUtils.sh  codestyle.md  main.cpp  vcpkg.json
.cache/clangd/index/: Engine.cpp.8BBC87310A359B58.idx
.github/workflows/: format_check.yaml
Core/: CommandBuffer.cpp  DebugMessanger.cpp  DebugMessanger.hpp  Engine.cpp  Engine.hpp  Gpu.cpp  Gpu.hpp  Instance.cpp  Instance.hpp  Memory.cpp  Memory.hpp  Renderer.cpp  Renderer.hpp  gpu.cpp  gpu.hpp
Core/Window/: GlfwWindow.cpp  GlfwWindow.hpp  VkWindow.cpp  VkWindow.hpp  Window.cpp  Window.hpp
Project/: Mesh.cpp  Mesh.hpp  MeshesManager.cpp  MeshesManager.hpp  Scene.cpp  Scene.hpp
Shaders/: Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp
Shaders/Shaders/: empty.hpp  empty_v.vert
Utils/: File.hpp  Process.hpp  Sync.cpp  Sync.hpp  UtilsMacros.hpp  VkLog.hpp
game/: Background.cpp  Background.h  CMakeLists.txt  Floor.cpp  Floor.h  Game.cpp  Game.h  LightSource.cpp  LightSource.h  main.cpp  utils.cpp  utils.h
game/shaders/: lighting_fragment_shader.glsl  lighting_vertex_shader.glsl
game/src/: AbstractTextScreen.cpp  AbstractTextScreen.h  Animation.cpp  Animation.h  Background.cpp  Background.h  CaveScene.cpp  CaveScene.h  DimmingTransition.h  Drawable.h  Floor.cpp  Floor.h  Game.cpp  Game.h  Interactable.h  IntroScreen.cpp  IntroScreen.h  Keyboard.h  LightSource.cpp  LightSource.h  Passage.cpp  Passage.h  Player.cpp  Player.h  Rat.cpp  Rat.h  SolidObject.cpp  SolidObject.h  Tunnel.cpp  Tunnel.h  WorldWindow.cpp  WorldWindow.h  main.cpp  utils.cpp  utils.h
scripts/: clangUtils.sh  macos_install.sh  ubuntu_install.sh
src/: main.cpp
src/adapters_interfaces/: fabric_adapter.hpp
src/modules/graphics/facades/: facade.hpp
src/modules/graphics/src/: CMakeLists.txt  GraphicEngine.cpp  GraphicEngine.hpp  ObjectsMemory.hpp  VkInstance.cpp  VkInstance.hpp  VkPhysicalDevice.cpp  VkPhysicalDevice.hpp  VkPipeline.cpp  VkPipeline.h  VkTexture.cpp  VkTexture.hpp  VulkanInstance.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanTexture.cpp  VulkanTexture.hpp  facade.cpp
src/modules/imgui_docking/: CMakeLists.txt
src/modules/imgui_docking/backends/: imgui_impl_vulkan.cpp
src/modules/input_manager/: CMakeLists.txt  InputManager.cpp  InputManager.hpp
src/modules/objects/: Actor.cpp  Actor.hpp  AllObjects.hpp  BaseObject.hpp  CMakeLists.txt  PointLight.cpp  PointLight.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp
src/modules/renderable_scene/facades/: facade.hpp
src/modules/renderable_scene/src/: CMakeLists.txt  RenderableScene.hpp  facade.cpp
src/modules/scene_manager/facades/: facade.hpp
src/modules/scene_manager/src/: CMakeLists.txt  SceneManager.cpp  SceneManager.hpp  facade.cpp
src/modules/shader_loader/facades/: facade.hpp
src/modules/shader_loader/src/: CMakeLists.txt  facade.cpp
src/modules/sound/facade/: SoundSystem.hpp  facade.hpp  types.hpp
src/modules/sound/src/: CMakeLists.txt  SoundSystem.cpp  SoundSystemImpl.cpp  SoundSystemImpl.hpp
src/modules/ui/: CMakeLists.txt  UI.cpp  UI.hpp
src/modules/vk_core/: CMakeLists.txt
src/modules/vk_core/adapters/: fabric.hpp
src/modules/vk_core/facades/: facade.hpp
src/modules/vk_core/src/: CMakeLists.txt  GraphicEngine.cpp  GraphicEngine.hpp  VkInstance.cpp  VkInstance.h  VkInstance.hpp  VkPhysicalDevice.cpp  VkPhysicalDevice.hpp  facade.cpp
src/modules/windows/: CMakeLists.txt
src/modules/windows/adapters/: fabric.hpp
src/modules/windows/connectors/: fabric.hpp
src/modules/windows/facades/: facade.hpp
src/modules/windows/src/: CMakeLists.txt  facade.cpp  window.cpp  window.h  window.hpp
test/: test.cpp
tests/: CMakeLists.txt  graphic_module.hpp  renderable_scene.hpp  shader_loader_module.h  sound_module.hpp  test_all.cpp  test_list_all_devices.cpp  window_module.hpp
tests/resources/: test.frag  test.frag.spv  test.vert  test.vert.spv  test1.frag  test1.frag.spv  test1.vert  test1.vert.spv
